base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    api: api
spec:
  replicas: 5
  selector:
    matchLabels:
      api: api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
      labels:
        api: api
    spec:
      terminationGracePeriodSeconds: 30 
      containers:
        - name: api   
          image: ghcr.io/eugenchornogorskiy/chmor-bezp/backend:e16afd78f74db29d81ea92b6cf84add7af00b4b0
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: "1000m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /app/app.config.json
              name: app-config
              subPath: app.config.json
            - mountPath: /app/pokemon.json
              name: pokemons
              subPath: pokemon.json
          livenessProbe: 
            exec:
              command:
                - wget
                - -qO-
                - http://localhost:3000/health
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: app-config
          configMap:
            items:
              - key: app.config.json
                path: app.config.json
            name: app-config 
        - name: pokemons
          configMap:
            items:
              - key: pokemon.json
                path: pokemon.json
            name: pokemons
