base/authorization-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  labels:
    auth: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      auth: authentik
  template:
    metadata:
      labels:
        auth: authentik
    spec: 
      containers: 
        - name: authentik-server
          image: ghcr.io/goauthentik/server:latest  
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
          args: ["worker"] 
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:latest  
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
          args: ["server"] 
      restartPolicy: Always
