base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    nginx: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      nginx: nginx
  template:
    metadata:
      labels:
        nginx: nginx 
    spec:  
      securityContext:
        fsGroup: 101
      containers:
        - name: nginx
          image: ghcr.io/eugenchornogorskiy/chmor-bezp/frontend:12b3baa0db051fe51c07c2571cc605a387818280
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf 
              name: nginx-conf
              subPath: nginx.conf  
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: nginx-run
          livenessProbe: 
            exec:
              command:
                - curl
                - -f 
                - http://localhost:80
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: nginx-conf
          configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: nginx-conf 
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
      restartPolicy: Always
