base/authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
spec:
  selector:
    auth: authentik
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
