base/authorization-worker-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-network-policy
spec:
  podSelector:
    matchLabels:
      auth: authentik-worker
  policyTypes: 
    - Egress  
  egress:
    - to:
      - podSelector:
          matchLabels:
            auth-postgres: auth-postgres   
      ports: 
        - protocol: TCP
          port: 5432 
    - to:
      - podSelector:
          matchLabels:
            redis: redis 
      ports: 
        - protocol: TCP
          port: 6379
